--- a/transport-requests/package.json
+++ b/transport-requests/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.6",
+    "@types/leaflet-routing-machine": "^3.2.4",
+    "@types/node": "^18.7.1",
+    "antd": "^4.22.4",
+    "axios": "^0.27.2",
+    "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-resizable": "^1.0.0",
+    "react-leaflet": "^4.0.1",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.5",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^4.7.4"
   }
 }
