--- a/transport-requests/package.json
+++ b/transport-requests/package.json
@@ -13,10 +13,14 @@
     "antd": "^4.22.4",
     "axios": "^0.27.2",
     "leaflet": "^1.8.0",
+    "leaflet-control-geocoder": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-resizable": "^1.0.0",
     "react-leaflet": "^4.0.1",
+    "react-leaflet-routing-machine": "^0.0.5",
+    "react-redux": "^8.0.2",
+    "react-resizable-layout": "^0.3.1",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5",
